--- a/minecraft-chets.html
+++ b/minecraft-chets.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minecraft_chets</title>
+    <link rel="stylesheet" href="minecraft_chets.css">
+    <h1>minecraft cheats</h1>
 </head>
 <body>
     
