--- a/minecraft-chets.html
+++ b/minecraft-chets.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="minecraft_chets.css">
     <h1>minecraft cheats</h1>
 </head>
+<html>
+    <picture>
+        <source srcset="mdn-logo-wide.png" media="(min-width: 1000000px)" />
+        <img src="minecraft.png" alt="MDN" />
+      </picture>
+</html>
+
 <body>
     
 </body>
