--- a/minecraft-chets.html
+++ b/minecraft-chets.html
@@ -15,6 +15,17 @@
       </picture>
 </html>
 
+<html>
+        <video controls>
+            <source src="minecraft2.mp4" type="video/webm" />
+            <source src="minecraft2.mp4" type="video/mp4" />
+            <p>
+              Your browser doesn't support HTML video. Here is a
+              <a href="minecraft2.mp4">link to the video</a> instead.
+            </p>
+          </video>
+          
+    </html>
 <body>
     
 </body>
