--- a/my grid/grid.html
+++ b/my grid/grid.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my grid</title>
     <link rel="stylesheet" href="grid.css">
+<link rel="stylesheet" href="grid.py">
+<link rel="stylesheet" href="grid.js">
 </head>
 <body>
     
