--- a/fawourite.html
+++ b/fawourite.html
@@ -12,7 +12,9 @@
         Your favorite's:
     </p>
 <ul>
-    <li><a href="file:///C:/Users/jerem/git/my_web/minecraft-chets.html">minecraft-chets</a>
+    <li><a href="file:///C:/Users/jerem/git/my_web/minecraft-chets.html">minecraft-chets</a><li>
+        <a href="file:///C:/Users/jerem/git/Newfolder/minecraft_chets.html">minecraft chets 2</a>
+    </li>
         <ul> 
 <ul>
 
