--- a/minecraft-chets.html
+++ b/minecraft-chets.html
@@ -14,7 +14,7 @@
     <blockquote cite="file:///C:/Users/jerem/git/Newfolder/minecraft_chets.html">
         <p>Look at other of my web.</p>
     </blockquote>
-    <figcaption>—jeremiR, <cite>poland</cite></figcaption>
+    <figcaption>—JeremiR, <cite>poland</cite></figcaption>
 </figure>
 
   <button class="favorite styled"
