--- a/fawourite.html
+++ b/fawourite.html
@@ -12,10 +12,10 @@
         Your favorite's:
     </p>
 <ul>
-    <li><a href="file:///C:/Users/jerem/git/my_web/minecraft-chets.html">minecraft-chets</a><li>
-        <a href="file:///C:/Users/jerem/git/Newfolder/minecraft_chets.html">minecraft chets 2</a>
-    </li>
-        <ul> 
+    <li><a href="file:///C:/Users/jerem/git/my_web/minecraft-chets.html">minecraft-chets</a></li>
+    <li><a href="file:///C:/Users/jerem/git/Newfolder/important.html">minecraft blocks</a></li>   
+    <li><a href="file:///C:/Users/jerem/git/my_web/my%20grid/grid.html">my grid</a></li>
+    <ul> 
 <ul>
 
 </ul>
