--- a/minecraft-chets.html
+++ b/minecraft-chets.html
@@ -44,9 +44,9 @@
       <p>my fawourite page are:</p>
 
 <ul>
-  <li><a href="https://www.bing.com/images/search?q=kot&qs=n&form=QBIRMH&sp=-1&pq=kot&sc=10-3&cvid=8FF328719A1C4A3F861CF049E116C7C7&ghsh=0&ghacc=0&adlt=strict&towww=1&redig=7674E1A8908D4DE784C1E50AB92DAB4C&first=1&tsc=ImageHoverTitle">cat</a></li>
+  <li><a href="https://www.bing.com/images/search?q=kot&qs=n&form=QBIRMH&sp=-1&pq=kot&sc=10-3&cvid=8FF328719A1C4A3F861CF049E116C7C7&ghsh=0&ghacc=0&adlt=strict&towww=1&redig=7674E1A8908D4DE784C1E50AB92DAB4C&first=1&tsc=ImageHoverTitle">Cat</a></li>
   <li><a href="https://www.bing.com/images/search?q=horse&form=HDRSC3&adlt=strict&towww=1&redig=86800AB4F1FF4F10A292696145EE2C9D&first=1&tsc=ImageHoverTitle">Horse</a></li>
-  <li><a href="https://www.bing.com/images/search?q=owczarek%20szetlandzki&qs=AS&form=QBIR&sp=3&ghc=1&pq=owczarek%20sz&sc=10-11&sk=AS2&cvid=15AE734D000746678D3E9442E1C70637&ghsh=0&ghacc=0&first=1&tsc=ImageHoverTitle&adlt=strict&towww=1&redig=6D85178E21CE45E6A6EF0E582581D55D">dog</a></li>
+  <li><a href="https://www.bing.com/images/search?q=owczarek%20szetlandzki&qs=AS&form=QBIR&sp=3&ghc=1&pq=owczarek%20sz&sc=10-11&sk=AS2&cvid=15AE734D000746678D3E9442E1C70637&ghsh=0&ghacc=0&first=1&tsc=ImageHoverTitle&adlt=strict&towww=1&redig=6D85178E21CE45E6A6EF0E582581D55D">Dog</a></li>
 </ul>
 
     </html>
@@ -330,7 +330,15 @@ Minecraft Top Page
 </html>
 <iframe id="inlineFrameExample"
     title="Inline Frame Example"
-    width="300"
-    height="200"
+    width="500"
+    height="300"
     src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
 </iframe>
+
+
+<label for="username">Username: (3-16 characters)</label>
+<input name="username" type="text"  pattern="\w{10,16}" required>
+
+<label for="pin">PIN: (4 digits)</label>
+<input name="pin" type="password"  pattern="\d{4,4}" required>
+
