put jqueras in a folder

--- a/jquery/my_web.html
+++ b/jquery/my_web.html
@@ -13,15 +13,25 @@
         <li>w jaki sposób mamy się stobą skontaktować(wybierz przynajmniej 
             jedną metodę)
             <ul>
-        </li>
-        <label for="by-email"> <input type="checkbox" name="by-contakt-tipe" 
-            value="E-mail" id="by-email" />E-mail</label>
-                                            / | \
-                                              | 
-                                              |    
-
-
+                </li>
+                <label for="by-email"> <input type="checkbox" name="by-contakt-tipe" 
+                value="E-mail" id="by-email" />E-mail</label>
+                <input class="conditional" type="text" name="email" id="email" /> 
+                <span>(wymagane, jeśli zaznaczono odpowiednie pole wyboru)</span>                              
+                <li>                                                                       |    
+                </li>
+                <label for="by-phone"> <input type="checkbox" name="by-contakt-tipe" 
+                value="Phone" id="by-phone" />Telefon</label>
+                <input class="conditional" type="text" name="Phone" id="Phone" /> 
+                <span>(wymagane, jeśli zaznaczono odpowiednie pole wyboru)</span>                              
+                <li>
+                </li>
+                <label for="by-Fax"> <input type="checkbox" name="by-contakt-tipe" 
+                value="Fax" id="by-Fax" />Fax</label>
+                <input class="conditional" type="text" name="Fax" id="Fax" /> 
+                <span>(wymagane, jeśli zaznaczono odpowiednie pole wyboru)</span>                              
+                <li> 
             </ul>
-
+        <li>    
     </ol>
 </fieldset>
