--- a/jquery/my_web.html
+++ b/jquery/my_web.html
@@ -35,4 +35,8 @@
         <li>    
     </ol>
 </fieldset>
+<head>
+    <script>src="jquery.js" type="text/javascript"</script>
+    <script>src="MyJavaskript.js" type="text/javascript"></script>
+</head>
 
