--- a/minecraft-chets.html
+++ b/minecraft-chets.html
@@ -7,6 +7,8 @@
     <title>minecraft chets</title>
     <link rel="stylesheet" href="minecraft_chets.css">
     <h1>minecraft cheats</h1>
+    <script src="jquery.js" type="text/javascript"></script>
+    <script src="minecraft-chets.html" type="text/html"></script>
 </head>
 
 <html>
@@ -33,10 +35,7 @@
 
 
 
-    <head>
-      
-    </head>
-
+    
 
 
 
@@ -48,6 +47,10 @@
   <li><a href="https://www.bing.com/images/search?q=horse&form=HDRSC3&adlt=strict&towww=1&redig=86800AB4F1FF4F10A292696145EE2C9D&first=1&tsc=ImageHoverTitle">Horse</a></li>
   <li><a href="https://www.bing.com/images/search?q=owczarek%20szetlandzki&qs=AS&form=QBIR&sp=3&ghc=1&pq=owczarek%20sz&sc=10-11&sk=AS2&cvid=15AE734D000746678D3E9442E1C70637&ghsh=0&ghacc=0&first=1&tsc=ImageHoverTitle&adlt=strict&towww=1&redig=6D85178E21CE45E6A6EF0E582581D55D">Dog</a></li>
 </ul>
+<head>
+  <button onclick="location.href='file://C:/Users/jerem/git/my_web/my_web.html'" type="button">
+    my Page</button>
+</head>
 
     </html>
 
